--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
+
+//    JUnit 5
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
 }
